# actix-todo-app-rust

./: Cargo.toml  README.md  docker-compose.yaml  script.sql
src/: config.rs  db.rs  errors.rs  handlers.rs  schema.rs
